--- a/style.css
+++ b/style.css
@@ -229,7 +229,7 @@
 
 }
 
-.who-we-are span {
+span {
     color: var(--green);
 }
 
@@ -267,4 +267,90 @@
     font-weight: 500;
     font-size: 1.2rem;
     cursor: pointer;
+}
+
+
+.client-testimonial {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-transform: capitalize;
+    margin-top: 7em;
+    padding: 2em;
+    text-align: center;
+}
+
+.client-testimonial h4 {
+    font-size: 2.5rem;
+}
+
+.client-testimonial>p {
+    max-width: 40em;
+    margin-top: 1em;
+    font-weight: 300;
+    margin-bottom: 4em;
+}
+
+.avatar {
+    position: relative;
+    width: 6em;
+    height: 6em;
+    border-radius: 50%;
+    background-color: #ececec;
+    margin-bottom: 2em;
+}
+
+.testimonial {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: var(--green);
+    padding: 1.5em;
+    border-radius: 15px;
+    color: white;
+    max-width: 30em;
+}
+
+.testimonial h5 {
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.testimonial p {
+
+    font-weight: 400;
+
+}
+
+.testinomial-list {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 2em;
+}
+
+.more {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
+}
+
+.rounded {
+    border-radius: 50%;
+    background-color: var(--green);
+    color: white;
+
+    font-weight: 500;
+    font-size: 1.2rem;
+    cursor: pointer;
+    margin-top: 2em;
+    width: 2em;
+    height: 2em;
+}
+
+.more :first-child {
+    background-color: #000;
 }
